# fraude_detection

./: .gitignore  README.md  pyproject.toml
fraud_detection/: preprocessing.py  train.py
