[tool.poetry]
name = "fraud-detection"
version = "0.1.0"
description = "Featurespace Coding Interview"
authors = ["Faraz M. Awan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.1"
imblearn = "^0.0"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
